<resources>
    <string name="app_name">红包街圈</string>
    <string name="action_settings">Settings</string>
    <string name="index">首页</string>
    <string name="category">类目</string>
    <string name="like">喜欢</string>
    <string name="mine">我的</string>
    <string name="search_hint">请输入关键词</string>
    <string name="baby_setting_tip">设定宝宝档案</string>
    <string name="baby_sex">性别</string>
    <string name="baby_birth">生日</string>
    <string name="skip_tip">先跳过，回头再设定</string>
    <string name="girl">女孩</string>
    <string name="boy">男孩</string>
    <string name="baby_sex_tip">请选择宝宝性别</string>
    <string name="cancel">取消</string>
    <string name="data_pick_tip">请选择生日</string>
    <string name="confirm">确定</string>
    <string name="tv_children_clothes">童装</string>
    <string name="tv_shoes">童鞋</string>
    <string name="tv_accessory">配饰</string>
    <string name="tv_appliance">用品</string>
    <string name="tv_toy">玩具</string>
    <string name="load_more">加载更多</string>
    <string name="category_search">请输入产品关键词</string>
    <string name="login">登录</string>
    <string name="third_login_title">第三方账号登录</string>
    <string name="third_qq">QQ</string>
    <string name="third_weibo">微博</string>
    <string name="third_weixin">微信</string>
    <string name="et_phone">手机号</string>
    <string name="et_pwd">密码</string>
    <string name="user_register">新用户注册</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="input_mobile_tip">请输入手机号</string>
    <string name="input_pwd_tip">请输入密码</string>
    <string name="register">注册</string>
    <string name="step_1">1</string>
    <string name="step_2">2</string>
    <string name="step_3">3</string>
    <string name="register_verify">验证</string>
    <string name="register_set_nickname">设置昵称</string>
    <string name="et_verify">请输入验证码</string>
    <string name="et_nickname">请输入昵称</string>
    <string name="find_pwd_verify"><![CDATA[验证&新密码]]></string>
    <string name="find_pwd_set_finish">设置完成</string>
    <string name="next_step">下一步</string>
    <string name="sms_send_tip">短信验证码已发送到手机 %1$s</string>
    <string name="time_count_down_tip">%1$s秒后可重新获取</string>
    <string name="set_pwd_complete_tip">重新设置密码完成</string>
    <string name="register_set">设置</string>
    <string name="resend_verify_code">重新发送验证码</string>
    <string name="error_mobile_tip">请输入正确的手机号</string>
    <string name="error_pwd_tip">请输入至少六位字符以上的密码</string>
    <string name="input_verify_tip">请输入验证码</string>
    <string name="error_verify_code_tip">验证码错误</string>
    <string name="set_nickname_complete_tip">设置昵称成功</string>
    <string name="jump_to_login_tip">现在去登录</string>
    <string name="input_nickname_tip">请输入昵称</string>
    <string name="error_nickname_tip">请输入2-10个字昵称</string>
    <string name="find_pwd_title">找回密码</string>
    <string name="find_pwd_mobile_tip">输入手机号</string>
    <string name="login_now">立即登录</string>
    <string name="brand_tip">品牌:</string>
    <string name="apply_tip">适用:</string>
    <string name="tv_sales">销量</string>
    <string name="tv_like">喜欢</string>
    <string name="tv_good_reputation">好评率</string>
    <string name="tv_goods_desc">描述相符</string>
    <string name="tv_server_atti">服务态度</string>
    <string name="tv_delivery_speed">发货速度</string>
    <string name="recommend">推荐</string>
    <string name="hot_mom_tip">由辣妈</string>
    <string name="mother_evaluation_num">妈咪评价(%1$s)</string>
    <string name="mother_evaluation_empty">妈咪评价</string>
    <string name="evaluation_count">(%1$s)</string>
    <string name="evaluation_add">[追评]%1$s</string>
    <string name="jump_to_taobao">去淘宝购买</string>
    <string name="unlogin_like_tip">登陆后会永久保存您的喜欢记录</string>
    <string name="mine_baby_doc">宝宝档案</string>
    <string name="my_fav">我喜欢的</string>
    <string name="mine_suggestion">意见反馈</string>
    <string name="mine_weixin_share">推荐给微信好友</string>
    <string name="mine_recommend_shop">推荐好店给小世界</string>
    <string name="buyer_recommend">辣妈推荐</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_history">清空历史搜索</string>
    <string name="search_history">历史记录</string>
    <string name="search">搜索</string>
    <string name="input_search_key_tip">请输入搜索关键词</string>
    <string name="setting">设置</string>
    <string name="no_network">无网络连接</string>
    <string name="empty" />
    <string name="loading">加载中…</string>
    <string name="reload">点击屏幕，重新加载</string>
    <string name="head_tip">头像</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="slow_network">您的网络不给力</string>
    <string name="exit_tip">再按一次退出</string>
    <string name="personality_customization">筛选</string>
    <string name="sex_all">全部</string>
    <string name="sex_boy">男孩</string>
    <string name="sex_girl">女孩</string>
    <string name="filter_setting">筛选</string>
    <string name="come_from">来自%s</string>
    <string name="tv_children_clothes_up">上装</string>
    <string name="tv_children_clothes_down">下装</string>
    <string name="tv_dress">裙装</string>
    <string name="tv_suit">套装</string>
    <string name="login_success">登录成功</string>
    <string name="update">更新</string>
    <string name="no_more">无更多内容</string>
    <string name="add_fav_success">喜欢成功</string>
    <string name="cancel_fav_success">取消喜欢</string>
    <string name="nickname">昵称</string>
    <string name="phone">手机号</string>
    <string name="change_pwd">修改密码</string>
    <string name="logout">退出当前账号</string>
    <string name="logout_success">注销成功</string>
    <string name="evaluation_empty">暂无评价</string>
    <string name="str_turn_back">取消</string>
    <string name="str_forward">前进</string>
    <string name="baby_doc_unset">还未设定</string>
    <string name="save">保存</string>
    <string name="save_success">修改成功</string>
    <string name="et_old_pwd">原始密码</string>
    <string name="et_new_pwd">设置新密码</string>
    <string name="change">修改</string>
    <string name="select_from_gallery">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="upload_success">上传成功</string>
    <string name="send">发送</string>
    <string name="input_suggestion">请输入您的意见</string>
    <string name="error_date">您选的日子还没到哦</string>
    <string name="taobao_detail">淘宝详情</string>
    <string name="tmall_detail">天猫详情</string>
    <string name="goods_detail">商品详情</string>
    <string name="empty_fav">您还没收藏过呢</string>
    <string name="clear">清空选项</string>
    <string name="empty_no_item">没有找到合适的商品</string>
    <string name="tv_tmall_rate_count">评价数</string>
    <string name="error_search_key">请输入搜索词</string>
    <string name="no_more_tip">没有更多了...</string>
    <string name="empty_no_search_result">没有找到合适的商品</string>
    <string name="first_server_words">您好，我们是小世界团队，您有任何想法及建议都可以反馈给我们，我们会在第一时间去改进！</string>
    <string name="server_back">谢谢您的反馈和建议</string>
    <string name="use_baby_info">用我的宝贝档案筛选</string>
    <string name="set_error_tip">请先选择性别和生日</string>
    <string name="set_save">设定</string>
    <string name="no_more_fav">无更多收藏内容了</string>
    <string name="jump_to_tmall">去天猫购买</string>
    <string name="mine_shopping_cart">淘宝购物车</string>
    <string name="mine_order">淘宝订单管理</string>
    <string name="input_old_pwd_tip">请输入原始密码</string>
    <string name="error_new_pwd_tip">请输入至少六位字符以上的新密码</string>
    <string name="baby">宝宝</string>
    <string name="et_reg_phone">中国大陆手机号</string>
    <string name="et_reg_pwd">设置登陆密码</string>
    <string name="et_find_pwd_phone">要找回的手机账号</string>
    <string name="turn_back">返回</string>
    <string name="close">关闭</string>
    <string name="submit">提交</string>
    <string name="reg_agree">注册即同意</string>
    <string name="xsj_agreement">小世界网络服务使用协议</string>
    <string name="error_suggestion_tip">您还没有发表你的见解呢</string>

    <!-- fashaoyou -->
    <string name="wy_main_tab_session">会话</string>
    <string name="wy_main_tab_contact">通讯录</string>
    <string name="input_panel_guess">猜 拳</string>

    <!-- location -->
    <string name="location_init_map_error">初始化地图服务失败</string>
    <string name="location_navigate">导航</string>
    <string name="self_location">我在这个位置</string>
    <string name="location_unable_to_get_you">暂时无法获取您的位置</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <!-- end -->

    <!--设置-->
    <string name="setting_photo_text">头像</string>
    <string name="setting_nickname">昵称</string>
    <string name="setting_account">账号名</string>
    <string name="setting_gender">性别</string>
    <string name="setting_male">男</string>
    <string name="setting_female">女</string>
    <string name="setting_logout">退出登录</string>
    <string name="setting_submit">完成</string>
    <string name="setting_modify_nickname">修改昵称</string>
    <string name="setting_modify_gender">修改性别</string>

    <!--我的：红包-->
    <string name="wode_hongbao_get">摇到的红包</string>
    <string name="wode_hongbao_give">发出的红包</string>
    <string name="wode_hongbao_get_now">马上去摇 ></string>
    <string name="wode_hongbao_give_now">马上去发 ></string>
    <string name="wode_hongbao_tip">通用红包在红包街圈及签约商家可替代现金使用</string>
    <string name="wode_hongbao_get_detail">摇到红包明细</string>
    <string name="wode_hongbao_give_detail">发出红包明细</string>
    <string name="wode_hongbao_get_count">已摇到0个红包共</string>
    <string name="wode_hongbao_give_count">已发出0个红包共</string>

    <!--我的：余额-->
    <string name="wode_yue_text">余额（元）</string>
    <string name="wode_yue_hongbao">我的红包>></string>
    <string name="wode_yue_bill">本月账单</string>

    <!--我的-->
    <string name="wode_hongbao">我的红包</string>
    <string name="wode_yue">我的余额</string>
    <string name="wode_yaoshi">我的摇匙</string>
    <string name="wode_vip_center">会员中心</string>
    <string name="wode_orders">订单</string>
    <string name="wode_cart">购物车</string>
    <string name="wode_recommendation">推荐有礼</string>
    <string name="wode_rank">排行榜</string>
    <string name="wode_collection">收藏</string>
    <string name="wode_setting">设置</string>

    <!--我的：摇匙-->
    <string name="wode_yaoshi_text">剩余摇匙（枚）</string>
    <string name="wode_yaoshi_desc">什么是摇匙?</string>
    <string name="wode_yaoshi_desc_content">有了摇匙您就可以在红包街圈摇红包啦，每1枚摇匙等于摇1次红包的机会</string>
    <string name="wode_yaoshi_buy">购买摇匙</string>
    <string name="wode_yaoshi_buy_desc">枚摇匙</string>

    <!--分享dialog-->
    <string name="dialog_share">分享</string>
    <string name="dialog_wechat_friend">微信好友</string>
    <string name="dialog_wechat_space">微信朋友圈</string>
    <string name="dialog_cancel">取消</string>

    <string name="find_password"><u>找回密码？</u></string>
</resources>
