<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_dialog_share"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:text="@string/cancel"
        android:textColor="@color/color_dialog_share_text"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dialog_share_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_dialog_cancel"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_dialog_share_ll"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/dialog_share"
            android:textColor="@color/color_wode_black_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line_item" />

        <TextView
            android:id="@+id/tv_wechat_friend"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/dialog_wechat_friend"
            android:textColor="@color/color_dialog_share_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line_item" />

        <TextView
            android:id="@+id/tv_wechat_space"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:text="@string/dialog_wechat_space"
            android:textColor="@color/color_dialog_share_text" />
    </LinearLayout>
</RelativeLayout>